# advent-of-code-python-2024

./: Makefile  pyproject.toml
day1/: day1.py
day10/: day10.py
day11/: day11.py
day12/: day12.py
day13/: day13.py
day15/: day15.py
day16/: day16.py
day17/: day17.py
day18/: day18.py
day19/: day19.py
day2/: day2.py
day20/: day20.py
day21/: day21.py
day22/: day22.py
day23/: day23.py
day24/: day24.py
day25/: day25.py
day3/: day3.py
day4/: day4.py
day5/: day5.py
day6/: day6.py
day7/: day7.py
day8/: day8.py
day9/: day9.py
