[tool.poetry]
name = "aoc_python_2024"
version = "0.1.0"
description = "A project using NetworkX and linting tools"
authors = ["Your Name <youremail@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"  # Replace with your Python version
networkx = "^3.0"
ruff = "^0.1"
numpy = "^2.0"

[tool.poetry.group.dev.dependencies]
black = "^23.0"
flake8 = "^6.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"